[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/buttons/DefaultButton2.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/RussoOne.tres" type="DynamicFont" id=2]

[node name="Button" type="Button"]
margin_left = 161.452
margin_top = 211.906
margin_right = 363.452
margin_bottom = 270.906
custom_fonts/font = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
